# rocket

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  fc.cpp  gc.cpp  main.c  main.cpp  pico_sdk_import.cmake  picow_access_point.c  rf24.cpp  sd.cpp  src.cpp  src.h  user.cpp
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml  github-release.yml
dhcpserver/: dhcpserver.c
hooks/: post_checkout
lib/: CMakeLists.txt
lib/BMP280/: CMakeLists.txt  bmp280.cpp  bmp280.h
lib/MPU6050/: CMakeLists.txt  mpu6050.cpp  mpu6050.h
lib/RF24/utility/rp2/: spi.h
lib/SD_FATFS/: CMakeLists.txt
lib/SD_FATFS/sd_driver/: hw_config.c  spi.c
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/sd_driver/: hw_config.c
src/: bus_init.cpp  rf24.cpp  sd.cpp
src/test/: test.cpp
